<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#0A86DF" >

    <!-- Player 1 -->

    <TextView
        android:id="@+id/player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/player_1" />

    <TextView
        android:id="@+id/player_1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/player_1_score" />

    <Button
        android:id="@+id/add_5_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/player_1"
        android:text="@string/add_5_p1" />

    <Button
        android:id="@+id/add_10_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_1"
        android:layout_toRightOf="@+id/add_5_p1"
        android:text="@string/add_10_p1" />

    <Button
        android:id="@+id/add_ace_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_1"
        android:layout_toRightOf="@+id/add_10_p1"
        android:text="@string/add_ace_p1" />

</RelativeLayout>