<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#AAAD2D"
    android:orientation="vertical" >

    <!-- Player 2 -->

    <TextView
        android:id="@+id/player_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/player_4" />

    <TextView
        android:id="@+id/player_4_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/player_4_score" />

    <Button
        android:id="@+id/add_5_p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/player_4"
        android:text="@string/add_5_p4" />

    <Button
        android:id="@+id/add_10_p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_4"
        android:layout_toRightOf="@+id/add_5_p4"
        android:text="@string/add_10_p4" />

    <Button
        android:id="@+id/add_ace_p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_4"
        android:layout_toRightOf="@+id/add_10_p4"
        android:text="@string/add_ace_p4" />

</RelativeLayout>